[package]
name = "radomsko"
version = "0.1.0"
authors = ["j39m"]
edition = "2021"

[[bin]]
name = "radomsko"
path = "src/main.rs"

[dependencies]
colorful = "0"
ctrlc = "3"
home = "0"
indoc = "2"
subprocess = "0"
tempfile = "3"
walkdir = "2"

[dependencies.clap]
version = "4"
features = [ "derive" ]
